--- a/public/styles.css
+++ b/public/styles.css
@@ -17,7 +17,6 @@ body{
     text-align: justify;
     position: relative;
     padding-top: 100px
-    /* padding-bottom: 500px; */
 }
 
 p, .aoe-items{
@@ -189,15 +188,14 @@ hr{
     height: 100vh;
     background-image: url("./images/doctor-img.webp");
     background-repeat: no-repeat;
-    background-position-x: -150px;
     background-size: cover;
     display: flex;
     align-items: center; 
     justify-content: center;
-    margin-top:-80px;
+    margin-top: -50px;
 }
 
-.background-container{
+/* .background-container{
     width: 1300px;
     height: 500px;
     background-color: rgb(0, 0, 0, 0.3);
@@ -208,21 +206,17 @@ hr{
     padding: 0 300px;
     text-align: center;
     margin-top: 90px;
+} */
+
+.about-heading{
+    color: #2a2a2a;
 }
 
-.background-container h1{
-    
-    font-weight: bold;;
-    color: #ffffff;
-    font-size: 60px;
-
+.education{
+    margin-left: 70px;
 }
 
-.background-container p{
-    color: #DADADA;
-}
-
-.aoe-container{
+.education, .aoe-container{
     display: flex;
     justify-content: space-between;
 }
@@ -389,10 +383,16 @@ hr{
 /* supportive care end  */
 
 /* Reach us start  */
+
+
 .box{
     margin-bottom: 15px;
     display: flex;
     
+}
+
+.text{
+    width: 90%;
 }
 
 .text h4{
@@ -409,7 +409,7 @@ hr{
 }
 
 .Icon{
-    width:70px;
+    width:80px;
 }
 
 .fa-icon{
@@ -577,17 +577,23 @@ hr{
    /* aboutapecialist page starts  */
    .about-container{
     height: 70vh;
+    background-position-x: -200px;
    }
 
    .about-container h1{
     font-size: 35px;
    }
 
-   .background-container{
+   /* .background-container{
     width:350px;
     height: 400px;
     padding: 20px;
+   } */
+
+   .about-heading{
+    margin: 20px 30px 0 30px;
    }
+
 
    .aoe-container{
     flex-direction: column;
@@ -687,19 +693,14 @@ hr{
    /* carousel end  */
 
    /* reachus start  */
-   .box{
-    margin-left: 30px;
+   .Box{
+    display: flex;
+    justify-content: center;
    }
-
-
 
    .text h4{
     font-size: 20px;
-   }
-
-   button.btn.btn-primary.btn-lg.appointment-btn {
-    margin-left: 25px;
-}
+   } 
 
    .Map iframe{
     margin-top: 30px;
@@ -854,9 +855,13 @@ hr{
     height: 60vh;
    }
 
-   .background-container{
+   /* .background-container{
     width: 800px;
     padding: 100px;;
+   } */
+
+   .about-heading{
+    margin: 30px 40px 0 40px;
    }
    /* aboutspecialist page starts  */
 
