--- a/public/styles.css
+++ b/public/styles.css
@@ -213,10 +213,6 @@ hr{
     margin: 40px 20px 0 20px;
 }
 
-/* .education-items{
-    font-weight: 100;
-} */
-
 .aoe-container{
     display: flex;
     justify-content: space-between;
@@ -503,12 +499,29 @@ hr{
 
     /* landing page start  */
 
+    /* .landing-page{
+        width: 100vw;
+        height: 800px;
+        background-image: url("./images/landing-img.webp");
+        background-repeat: no-repeat;
+        background-size: 1706px auto;
+        background-position-y: -80px;
+        text-transform: capitalize;
+        display: flex;
+        align-items: center;
+        padding-left: 90px;
+        padding-bottom: 70px;
+        margin: 0;
+        margin-top: -20px;
+    } */
+
     .landing-page{
+        height: 60vh;
         padding: 0 30px;
+        background-size: cover;
         margin-top: -40px;
         margin-bottom: 50px;
-        height: 80vh;
-        background-position: -720px -100px;
+        background-position: -440px 0;
         text-align: center;
 
     }
