--- a/public/styles.css
+++ b/public/styles.css
@@ -99,6 +99,7 @@ h1, h2, h4, h5 {
     background-repeat: no-repeat;
     background-size: 1706px auto;
     background-position-y: -80px;
+    background-position-x: 0px;
     text-transform: capitalize;
     display: flex;
     align-items: center;
@@ -524,7 +525,7 @@ hr{
         background-size: cover;
         margin-top: -40px;
         margin-bottom: 50px;
-        background-position: -440px 0;
+        background-position: -390px 0;
         text-align: center;
 
     }
